cmake_minimum_required(VERSION 3.9)
project(Nachos_Offline)

set(CMAKE_CXX_STANDARD 11)

add_executable(Nachos_Offline
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cmake-build-debug/Nachos_Offline.cbp
        "Offline 1/nachos_64bit/code/bin/coff.h"
        "Offline 1/nachos_64bit/code/bin/coff2flat.c"
        "Offline 1/nachos_64bit/code/bin/coff2noff"
        "Offline 1/nachos_64bit/code/bin/coff2noff.c"
        "Offline 1/nachos_64bit/code/bin/coff2noff.o"
        "Offline 1/nachos_64bit/code/bin/d.c"
        "Offline 1/nachos_64bit/code/bin/disasm.c"
        "Offline 1/nachos_64bit/code/bin/encode.h"
        "Offline 1/nachos_64bit/code/bin/execute.c"
        "Offline 1/nachos_64bit/code/bin/halt"
        "Offline 1/nachos_64bit/code/bin/instr.h"
        "Offline 1/nachos_64bit/code/bin/int.h"
        "Offline 1/nachos_64bit/code/bin/main.c"
        "Offline 1/nachos_64bit/code/bin/Makefile"
        "Offline 1/nachos_64bit/code/bin/noff.h"
        "Offline 1/nachos_64bit/code/bin/opstrings.c"
        "Offline 1/nachos_64bit/code/bin/out.c"
        "Offline 1/nachos_64bit/code/bin/system.c"
        "Offline 1/nachos_64bit/code/filesys/test/big"
        "Offline 1/nachos_64bit/code/filesys/test/medium"
        "Offline 1/nachos_64bit/code/filesys/test/small"
        "Offline 1/nachos_64bit/code/filesys/addrspace.o"
        "Offline 1/nachos_64bit/code/filesys/bitmap.o"
        "Offline 1/nachos_64bit/code/filesys/console.o"
        "Offline 1/nachos_64bit/code/filesys/consumer.o"
        "Offline 1/nachos_64bit/code/filesys/directory.cc"
        "Offline 1/nachos_64bit/code/filesys/directory.h"
        "Offline 1/nachos_64bit/code/filesys/directory.o"
        "Offline 1/nachos_64bit/code/filesys/disk.o"
        "Offline 1/nachos_64bit/code/filesys/exception.o"
        "Offline 1/nachos_64bit/code/filesys/filehdr.cc"
        "Offline 1/nachos_64bit/code/filesys/filehdr.h"
        "Offline 1/nachos_64bit/code/filesys/filehdr.o"
        "Offline 1/nachos_64bit/code/filesys/filesys.cc"
        "Offline 1/nachos_64bit/code/filesys/filesys.h"
        "Offline 1/nachos_64bit/code/filesys/filesys.o"
        "Offline 1/nachos_64bit/code/filesys/fstest.cc"
        "Offline 1/nachos_64bit/code/filesys/fstest.o"
        "Offline 1/nachos_64bit/code/filesys/interrupt.o"
        "Offline 1/nachos_64bit/code/filesys/machine.o"
        "Offline 1/nachos_64bit/code/filesys/main.o"
        "Offline 1/nachos_64bit/code/filesys/Makefile"
        "Offline 1/nachos_64bit/code/filesys/mipssim.o"
        "Offline 1/nachos_64bit/code/filesys/nachos"
        "Offline 1/nachos_64bit/code/filesys/openfile.cc"
        "Offline 1/nachos_64bit/code/filesys/openfile.h"
        "Offline 1/nachos_64bit/code/filesys/openfile.o"
        "Offline 1/nachos_64bit/code/filesys/preemptive.o"
        "Offline 1/nachos_64bit/code/filesys/producer.o"
        "Offline 1/nachos_64bit/code/filesys/progtest.o"
        "Offline 1/nachos_64bit/code/filesys/scheduler.o"
        "Offline 1/nachos_64bit/code/filesys/stats.o"
        "Offline 1/nachos_64bit/code/filesys/switch.o"
        "Offline 1/nachos_64bit/code/filesys/swtch.s"
        "Offline 1/nachos_64bit/code/filesys/synch.o"
        "Offline 1/nachos_64bit/code/filesys/synchdisk.cc"
        "Offline 1/nachos_64bit/code/filesys/synchdisk.h"
        "Offline 1/nachos_64bit/code/filesys/synchdisk.o"
        "Offline 1/nachos_64bit/code/filesys/sysdep.o"
        "Offline 1/nachos_64bit/code/filesys/system.o"
        "Offline 1/nachos_64bit/code/filesys/thread.o"
        "Offline 1/nachos_64bit/code/filesys/threadtest.o"
        "Offline 1/nachos_64bit/code/filesys/timer.o"
        "Offline 1/nachos_64bit/code/filesys/translate.o"
        "Offline 1/nachos_64bit/code/filesys/utility.o"
        "Offline 1/nachos_64bit/code/machine/console.cc"
        "Offline 1/nachos_64bit/code/machine/console.h"
        "Offline 1/nachos_64bit/code/machine/disk.cc"
        "Offline 1/nachos_64bit/code/machine/disk.h"
        "Offline 1/nachos_64bit/code/machine/interrupt.cc"
        "Offline 1/nachos_64bit/code/machine/interrupt.h"
        "Offline 1/nachos_64bit/code/machine/machine.cc"
        "Offline 1/nachos_64bit/code/machine/machine.h"
        "Offline 1/nachos_64bit/code/machine/mipssim.cc"
        "Offline 1/nachos_64bit/code/machine/mipssim.h"
        "Offline 1/nachos_64bit/code/machine/network.cc"
        "Offline 1/nachos_64bit/code/machine/network.h"
        "Offline 1/nachos_64bit/code/machine/stats.cc"
        "Offline 1/nachos_64bit/code/machine/stats.h"
        "Offline 1/nachos_64bit/code/machine/sysdep.cc"
        "Offline 1/nachos_64bit/code/machine/sysdep.h"
        "Offline 1/nachos_64bit/code/machine/timer.cc"
        "Offline 1/nachos_64bit/code/machine/timer.h"
        "Offline 1/nachos_64bit/code/machine/translate.cc"
        "Offline 1/nachos_64bit/code/machine/translate.h"
        "Offline 1/nachos_64bit/code/network/addrspace.o"
        "Offline 1/nachos_64bit/code/network/bitmap.o"
        "Offline 1/nachos_64bit/code/network/console.o"
        "Offline 1/nachos_64bit/code/network/consumer.o"
        "Offline 1/nachos_64bit/code/network/directory.o"
        "Offline 1/nachos_64bit/code/network/disk.o"
        "Offline 1/nachos_64bit/code/network/exception.o"
        "Offline 1/nachos_64bit/code/network/filehdr.o"
        "Offline 1/nachos_64bit/code/network/filesys.o"
        "Offline 1/nachos_64bit/code/network/fstest.o"
        "Offline 1/nachos_64bit/code/network/interrupt.o"
        "Offline 1/nachos_64bit/code/network/machine.o"
        "Offline 1/nachos_64bit/code/network/main.o"
        "Offline 1/nachos_64bit/code/network/Makefile"
        "Offline 1/nachos_64bit/code/network/mipssim.o"
        "Offline 1/nachos_64bit/code/network/nachos"
        "Offline 1/nachos_64bit/code/network/nettest.cc"
        "Offline 1/nachos_64bit/code/network/nettest.o"
        "Offline 1/nachos_64bit/code/network/network.o"
        "Offline 1/nachos_64bit/code/network/openfile.o"
        "Offline 1/nachos_64bit/code/network/post.cc"
        "Offline 1/nachos_64bit/code/network/post.h"
        "Offline 1/nachos_64bit/code/network/post.o"
        "Offline 1/nachos_64bit/code/network/preemptive.o"
        "Offline 1/nachos_64bit/code/network/producer.o"
        "Offline 1/nachos_64bit/code/network/progtest.o"
        "Offline 1/nachos_64bit/code/network/README"
        "Offline 1/nachos_64bit/code/network/scheduler.o"
        "Offline 1/nachos_64bit/code/network/stats.o"
        "Offline 1/nachos_64bit/code/network/switch.o"
        "Offline 1/nachos_64bit/code/network/swtch.s"
        "Offline 1/nachos_64bit/code/network/synch.o"
        "Offline 1/nachos_64bit/code/network/synchdisk.o"
        "Offline 1/nachos_64bit/code/network/sysdep.o"
        "Offline 1/nachos_64bit/code/network/system.o"
        "Offline 1/nachos_64bit/code/network/thread.o"
        "Offline 1/nachos_64bit/code/network/threadtest.o"
        "Offline 1/nachos_64bit/code/network/timer.o"
        "Offline 1/nachos_64bit/code/network/translate.o"
        "Offline 1/nachos_64bit/code/network/utility.o"
        "Offline 1/nachos_64bit/code/test/halt.c"
        "Offline 1/nachos_64bit/code/test/Makefile"
        "Offline 1/nachos_64bit/code/test/matmult.c"
        "Offline 1/nachos_64bit/code/test/script"
        "Offline 1/nachos_64bit/code/test/shell.c"
        "Offline 1/nachos_64bit/code/test/sort.c"
        "Offline 1/nachos_64bit/code/test/start.s"
        "Offline 1/nachos_64bit/code/threads/buffer.h"
        "Offline 1/nachos_64bit/code/threads/consumer.cc"
        "Offline 1/nachos_64bit/code/threads/consumer.h"
        "Offline 1/nachos_64bit/code/threads/consumer.o"
        "Offline 1/nachos_64bit/code/threads/copyright.h"
        "Offline 1/nachos_64bit/code/threads/interrupt.o"
        "Offline 1/nachos_64bit/code/threads/list.h"
        "Offline 1/nachos_64bit/code/threads/main.cc"
        "Offline 1/nachos_64bit/code/threads/main.o"
        "Offline 1/nachos_64bit/code/threads/Makefile"
        "Offline 1/nachos_64bit/code/threads/nachos"
        "Offline 1/nachos_64bit/code/threads/preemptive.cc"
        "Offline 1/nachos_64bit/code/threads/preemptive.h"
        "Offline 1/nachos_64bit/code/threads/preemptive.o"
        "Offline 1/nachos_64bit/code/threads/producer.cc"
        "Offline 1/nachos_64bit/code/threads/producer.h"
        "Offline 1/nachos_64bit/code/threads/producer.o"
        "Offline 1/nachos_64bit/code/threads/scheduler.cc"
        "Offline 1/nachos_64bit/code/threads/scheduler.h"
        "Offline 1/nachos_64bit/code/threads/scheduler.o"
        "Offline 1/nachos_64bit/code/threads/stats.o"
        "Offline 1/nachos_64bit/code/threads/switch.h"
        "Offline 1/nachos_64bit/code/threads/switch.o"
        "Offline 1/nachos_64bit/code/threads/switch.s"
        "Offline 1/nachos_64bit/code/threads/swtch.s"
        "Offline 1/nachos_64bit/code/threads/synch.cc"
        "Offline 1/nachos_64bit/code/threads/synch.h"
        "Offline 1/nachos_64bit/code/threads/synch.o"
        "Offline 1/nachos_64bit/code/threads/synchlist.h"
        "Offline 1/nachos_64bit/code/threads/sysdep.o"
        "Offline 1/nachos_64bit/code/threads/system.cc"
        "Offline 1/nachos_64bit/code/threads/system.h"
        "Offline 1/nachos_64bit/code/threads/system.o"
        "Offline 1/nachos_64bit/code/threads/thread.cc"
        "Offline 1/nachos_64bit/code/threads/thread.h"
        "Offline 1/nachos_64bit/code/threads/thread.o"
        "Offline 1/nachos_64bit/code/threads/threadtest.cc"
        "Offline 1/nachos_64bit/code/threads/threadtest.o"
        "Offline 1/nachos_64bit/code/threads/timer.o"
        "Offline 1/nachos_64bit/code/threads/utility.cc"
        "Offline 1/nachos_64bit/code/threads/utility.h"
        "Offline 1/nachos_64bit/code/threads/utility.o"
        "Offline 1/nachos_64bit/code/userprog/addrspace.cc"
        "Offline 1/nachos_64bit/code/userprog/addrspace.h"
        "Offline 1/nachos_64bit/code/userprog/addrspace.o"
        "Offline 1/nachos_64bit/code/userprog/bitmap.cc"
        "Offline 1/nachos_64bit/code/userprog/bitmap.h"
        "Offline 1/nachos_64bit/code/userprog/bitmap.o"
        "Offline 1/nachos_64bit/code/userprog/console.o"
        "Offline 1/nachos_64bit/code/userprog/consumer.o"
        "Offline 1/nachos_64bit/code/userprog/exception.cc"
        "Offline 1/nachos_64bit/code/userprog/exception.o"
        "Offline 1/nachos_64bit/code/userprog/interrupt.o"
        "Offline 1/nachos_64bit/code/userprog/machine.o"
        "Offline 1/nachos_64bit/code/userprog/main.o"
        "Offline 1/nachos_64bit/code/userprog/Makefile"
        "Offline 1/nachos_64bit/code/userprog/mipssim.o"
        "Offline 1/nachos_64bit/code/userprog/nachos"
        "Offline 1/nachos_64bit/code/userprog/preemptive.o"
        "Offline 1/nachos_64bit/code/userprog/producer.o"
        "Offline 1/nachos_64bit/code/userprog/progtest.cc"
        "Offline 1/nachos_64bit/code/userprog/progtest.o"
        "Offline 1/nachos_64bit/code/userprog/scheduler.o"
        "Offline 1/nachos_64bit/code/userprog/stats.o"
        "Offline 1/nachos_64bit/code/userprog/switch.o"
        "Offline 1/nachos_64bit/code/userprog/swtch.s"
        "Offline 1/nachos_64bit/code/userprog/synch.o"
        "Offline 1/nachos_64bit/code/userprog/syscall.h"
        "Offline 1/nachos_64bit/code/userprog/sysdep.o"
        "Offline 1/nachos_64bit/code/userprog/system.o"
        "Offline 1/nachos_64bit/code/userprog/thread.o"
        "Offline 1/nachos_64bit/code/userprog/threadtest.o"
        "Offline 1/nachos_64bit/code/userprog/timer.o"
        "Offline 1/nachos_64bit/code/userprog/translate.o"
        "Offline 1/nachos_64bit/code/userprog/utility.o"
        "Offline 1/nachos_64bit/code/vm/addrspace.o"
        "Offline 1/nachos_64bit/code/vm/bitmap.o"
        "Offline 1/nachos_64bit/code/vm/console.o"
        "Offline 1/nachos_64bit/code/vm/consumer.o"
        "Offline 1/nachos_64bit/code/vm/exception.o"
        "Offline 1/nachos_64bit/code/vm/interrupt.o"
        "Offline 1/nachos_64bit/code/vm/machine.o"
        "Offline 1/nachos_64bit/code/vm/main.o"
        "Offline 1/nachos_64bit/code/vm/Makefile"
        "Offline 1/nachos_64bit/code/vm/mipssim.o"
        "Offline 1/nachos_64bit/code/vm/nachos"
        "Offline 1/nachos_64bit/code/vm/preemptive.o"
        "Offline 1/nachos_64bit/code/vm/producer.o"
        "Offline 1/nachos_64bit/code/vm/progtest.o"
        "Offline 1/nachos_64bit/code/vm/scheduler.o"
        "Offline 1/nachos_64bit/code/vm/stats.o"
        "Offline 1/nachos_64bit/code/vm/switch.o"
        "Offline 1/nachos_64bit/code/vm/swtch.s"
        "Offline 1/nachos_64bit/code/vm/synch.o"
        "Offline 1/nachos_64bit/code/vm/sysdep.o"
        "Offline 1/nachos_64bit/code/vm/system.o"
        "Offline 1/nachos_64bit/code/vm/thread.o"
        "Offline 1/nachos_64bit/code/vm/threadtest.o"
        "Offline 1/nachos_64bit/code/vm/timer.o"
        "Offline 1/nachos_64bit/code/vm/translate.o"
        "Offline 1/nachos_64bit/code/vm/utility.o"
        "Offline 1/nachos_64bit/code/Makefile"
        "Offline 1/nachos_64bit/code/Makefile.common"
        "Offline 1/nachos_64bit/code/Makefile.dep"
        "Offline 1/nachos_64bit/nachos.ps"
        "Offline 1/nachos_64bit/NachosPrimer.pdf"
        "Offline 1/nachos_assignment_1.pdf"
        "Offline 2/Nachos-2 Assignment/CSE 120 -- Nachos Project 2_ Multiprogramming_files/style.css"
        "Offline 2/Nachos-2 Assignment/addrspace.html"
        "Offline 2/Nachos-2 Assignment/CSE 120 -- Nachos Project 2_ Multiprogramming.html"
        "Offline 2/Nachos-2 Assignment/exec.html"
        "Offline 2/Nachos-2 Assignment/Nachos 2 Summary.docx"
        "Offline 2/Nachos-2 Assignment/NACHOS.ppt"
        "Offline 2/Nachos-2 Assignment/Nachos2_Assignment.docx"
        "Offline 2/nachos_64bit/code/bin/coff.h"
        "Offline 2/nachos_64bit/code/bin/coff2flat.c"
        "Offline 2/nachos_64bit/code/bin/coff2noff"
        "Offline 2/nachos_64bit/code/bin/coff2noff.c"
        "Offline 2/nachos_64bit/code/bin/coff2noff.o"
        "Offline 2/nachos_64bit/code/bin/d.c"
        "Offline 2/nachos_64bit/code/bin/disasm.c"
        "Offline 2/nachos_64bit/code/bin/encode.h"
        "Offline 2/nachos_64bit/code/bin/execute.c"
        "Offline 2/nachos_64bit/code/bin/halt"
        "Offline 2/nachos_64bit/code/bin/instr.h"
        "Offline 2/nachos_64bit/code/bin/int.h"
        "Offline 2/nachos_64bit/code/bin/main.c"
        "Offline 2/nachos_64bit/code/bin/Makefile"
        "Offline 2/nachos_64bit/code/bin/noff.h"
        "Offline 2/nachos_64bit/code/bin/opstrings.c"
        "Offline 2/nachos_64bit/code/bin/out.c"
        "Offline 2/nachos_64bit/code/bin/system.c"
        "Offline 2/nachos_64bit/code/filesys/test/big"
        "Offline 2/nachos_64bit/code/filesys/test/medium"
        "Offline 2/nachos_64bit/code/filesys/test/small"
        "Offline 2/nachos_64bit/code/filesys/addrspace.o"
        "Offline 2/nachos_64bit/code/filesys/bitmap.o"
        "Offline 2/nachos_64bit/code/filesys/console.o"
        "Offline 2/nachos_64bit/code/filesys/consumer.o"
        "Offline 2/nachos_64bit/code/filesys/directory.cc"
        "Offline 2/nachos_64bit/code/filesys/directory.h"
        "Offline 2/nachos_64bit/code/filesys/directory.o"
        "Offline 2/nachos_64bit/code/filesys/disk.o"
        "Offline 2/nachos_64bit/code/filesys/exception.o"
        "Offline 2/nachos_64bit/code/filesys/filehdr.cc"
        "Offline 2/nachos_64bit/code/filesys/filehdr.h"
        "Offline 2/nachos_64bit/code/filesys/filehdr.o"
        "Offline 2/nachos_64bit/code/filesys/filesys.cc"
        "Offline 2/nachos_64bit/code/filesys/filesys.h"
        "Offline 2/nachos_64bit/code/filesys/filesys.o"
        "Offline 2/nachos_64bit/code/filesys/fstest.cc"
        "Offline 2/nachos_64bit/code/filesys/fstest.o"
        "Offline 2/nachos_64bit/code/filesys/interrupt.o"
        "Offline 2/nachos_64bit/code/filesys/machine.o"
        "Offline 2/nachos_64bit/code/filesys/main.o"
        "Offline 2/nachos_64bit/code/filesys/Makefile"
        "Offline 2/nachos_64bit/code/filesys/memory_manager.o"
        "Offline 2/nachos_64bit/code/filesys/mipssim.o"
        "Offline 2/nachos_64bit/code/filesys/nachos"
        "Offline 2/nachos_64bit/code/filesys/openfile.cc"
        "Offline 2/nachos_64bit/code/filesys/openfile.h"
        "Offline 2/nachos_64bit/code/filesys/openfile.o"
        "Offline 2/nachos_64bit/code/filesys/preemptive.o"
        "Offline 2/nachos_64bit/code/filesys/producer.o"
        "Offline 2/nachos_64bit/code/filesys/progtest.o"
        "Offline 2/nachos_64bit/code/filesys/scheduler.o"
        "Offline 2/nachos_64bit/code/filesys/spaceid_generator.o"
        "Offline 2/nachos_64bit/code/filesys/stats.o"
        "Offline 2/nachos_64bit/code/filesys/switch.o"
        "Offline 2/nachos_64bit/code/filesys/swtch.s"
        "Offline 2/nachos_64bit/code/filesys/synch.o"
        "Offline 2/nachos_64bit/code/filesys/synch_console.o"
        "Offline 2/nachos_64bit/code/filesys/synchdisk.cc"
        "Offline 2/nachos_64bit/code/filesys/synchdisk.h"
        "Offline 2/nachos_64bit/code/filesys/synchdisk.o"
        "Offline 2/nachos_64bit/code/filesys/sysdep.o"
        "Offline 2/nachos_64bit/code/filesys/system.o"
        "Offline 2/nachos_64bit/code/filesys/table.o"
        "Offline 2/nachos_64bit/code/filesys/thread.o"
        "Offline 2/nachos_64bit/code/filesys/threadtest.o"
        "Offline 2/nachos_64bit/code/filesys/timer.o"
        "Offline 2/nachos_64bit/code/filesys/translate.o"
        "Offline 2/nachos_64bit/code/filesys/utility.o"
        "Offline 2/nachos_64bit/code/machine/console.cc"
        "Offline 2/nachos_64bit/code/machine/console.h"
        "Offline 2/nachos_64bit/code/machine/disk.cc"
        "Offline 2/nachos_64bit/code/machine/disk.h"
        "Offline 2/nachos_64bit/code/machine/interrupt.cc"
        "Offline 2/nachos_64bit/code/machine/interrupt.h"
        "Offline 2/nachos_64bit/code/machine/machine.cc"
        "Offline 2/nachos_64bit/code/machine/machine.h"
        "Offline 2/nachos_64bit/code/machine/mipssim.cc"
        "Offline 2/nachos_64bit/code/machine/mipssim.h"
        "Offline 2/nachos_64bit/code/machine/network.cc"
        "Offline 2/nachos_64bit/code/machine/network.h"
        "Offline 2/nachos_64bit/code/machine/stats.cc"
        "Offline 2/nachos_64bit/code/machine/stats.h"
        "Offline 2/nachos_64bit/code/machine/sysdep.cc"
        "Offline 2/nachos_64bit/code/machine/sysdep.h"
        "Offline 2/nachos_64bit/code/machine/timer.cc"
        "Offline 2/nachos_64bit/code/machine/timer.h"
        "Offline 2/nachos_64bit/code/machine/translate.cc"
        "Offline 2/nachos_64bit/code/machine/translate.h"
        "Offline 2/nachos_64bit/code/network/addrspace.o"
        "Offline 2/nachos_64bit/code/network/bitmap.o"
        "Offline 2/nachos_64bit/code/network/console.o"
        "Offline 2/nachos_64bit/code/network/consumer.o"
        "Offline 2/nachos_64bit/code/network/directory.o"
        "Offline 2/nachos_64bit/code/network/disk.o"
        "Offline 2/nachos_64bit/code/network/exception.o"
        "Offline 2/nachos_64bit/code/network/filehdr.o"
        "Offline 2/nachos_64bit/code/network/filesys.o"
        "Offline 2/nachos_64bit/code/network/fstest.o"
        "Offline 2/nachos_64bit/code/network/interrupt.o"
        "Offline 2/nachos_64bit/code/network/machine.o"
        "Offline 2/nachos_64bit/code/network/main.o"
        "Offline 2/nachos_64bit/code/network/Makefile"
        "Offline 2/nachos_64bit/code/network/memory_manager.o"
        "Offline 2/nachos_64bit/code/network/mipssim.o"
        "Offline 2/nachos_64bit/code/network/nachos"
        "Offline 2/nachos_64bit/code/network/nettest.cc"
        "Offline 2/nachos_64bit/code/network/nettest.o"
        "Offline 2/nachos_64bit/code/network/network.o"
        "Offline 2/nachos_64bit/code/network/openfile.o"
        "Offline 2/nachos_64bit/code/network/post.cc"
        "Offline 2/nachos_64bit/code/network/post.h"
        "Offline 2/nachos_64bit/code/network/post.o"
        "Offline 2/nachos_64bit/code/network/preemptive.o"
        "Offline 2/nachos_64bit/code/network/producer.o"
        "Offline 2/nachos_64bit/code/network/progtest.o"
        "Offline 2/nachos_64bit/code/network/README"
        "Offline 2/nachos_64bit/code/network/scheduler.o"
        "Offline 2/nachos_64bit/code/network/spaceid_generator.o"
        "Offline 2/nachos_64bit/code/network/stats.o"
        "Offline 2/nachos_64bit/code/network/switch.o"
        "Offline 2/nachos_64bit/code/network/swtch.s"
        "Offline 2/nachos_64bit/code/network/synch.o"
        "Offline 2/nachos_64bit/code/network/synch_console.o"
        "Offline 2/nachos_64bit/code/network/synchdisk.o"
        "Offline 2/nachos_64bit/code/network/sysdep.o"
        "Offline 2/nachos_64bit/code/network/system.o"
        "Offline 2/nachos_64bit/code/network/table.o"
        "Offline 2/nachos_64bit/code/network/thread.o"
        "Offline 2/nachos_64bit/code/network/threadtest.o"
        "Offline 2/nachos_64bit/code/network/timer.o"
        "Offline 2/nachos_64bit/code/network/translate.o"
        "Offline 2/nachos_64bit/code/network/utility.o"
        "Offline 2/nachos_64bit/code/test/gnu-decstation-ultrix/decstation-ultrix/as"
        "Offline 2/nachos_64bit/code/test/gnu-decstation-ultrix/decstation-ultrix/cc1"
        "Offline 2/nachos_64bit/code/test/gnu-decstation-ultrix/decstation-ultrix/cpp0"
        "Offline 2/nachos_64bit/code/test/gnu-decstation-ultrix/decstation-ultrix/gcc"
        "Offline 2/nachos_64bit/code/test/gnu-decstation-ultrix/decstation-ultrix/ld"
        "Offline 2/nachos_64bit/code/test/array"
        "Offline 2/nachos_64bit/code/test/array.c"
        "Offline 2/nachos_64bit/code/test/array.coff"
        "Offline 2/nachos_64bit/code/test/array.o"
        "Offline 2/nachos_64bit/code/test/echo"
        "Offline 2/nachos_64bit/code/test/echo.c"
        "Offline 2/nachos_64bit/code/test/echo.coff"
        "Offline 2/nachos_64bit/code/test/echo.o"
        "Offline 2/nachos_64bit/code/test/exectest"
        "Offline 2/nachos_64bit/code/test/exectest.c"
        "Offline 2/nachos_64bit/code/test/exectest.coff"
        "Offline 2/nachos_64bit/code/test/exectest.o"
        "Offline 2/nachos_64bit/code/test/exittest"
        "Offline 2/nachos_64bit/code/test/exittest.c"
        "Offline 2/nachos_64bit/code/test/exittest.coff"
        "Offline 2/nachos_64bit/code/test/exittest.o"
        "Offline 2/nachos_64bit/code/test/halt"
        "Offline 2/nachos_64bit/code/test/halt.c"
        "Offline 2/nachos_64bit/code/test/halt.coff"
        "Offline 2/nachos_64bit/code/test/halt.o"
        "Offline 2/nachos_64bit/code/test/Makefile"
        "Offline 2/nachos_64bit/code/test/matmult"
        "Offline 2/nachos_64bit/code/test/matmult.c"
        "Offline 2/nachos_64bit/code/test/matmult.coff"
        "Offline 2/nachos_64bit/code/test/matmult.o"
        "Offline 2/nachos_64bit/code/test/newtest"
        "Offline 2/nachos_64bit/code/test/newtest.c"
        "Offline 2/nachos_64bit/code/test/newtest.coff"
        "Offline 2/nachos_64bit/code/test/newtest.o"
        "Offline 2/nachos_64bit/code/test/script"
        "Offline 2/nachos_64bit/code/test/shell"
        "Offline 2/nachos_64bit/code/test/shell.c"
        "Offline 2/nachos_64bit/code/test/shell.coff"
        "Offline 2/nachos_64bit/code/test/shell.o"
        "Offline 2/nachos_64bit/code/test/sort"
        "Offline 2/nachos_64bit/code/test/sort.c"
        "Offline 2/nachos_64bit/code/test/sort.coff"
        "Offline 2/nachos_64bit/code/test/sort.o"
        "Offline 2/nachos_64bit/code/test/start.c"
        "Offline 2/nachos_64bit/code/test/start.o"
        "Offline 2/nachos_64bit/code/test/start.s"
        "Offline 2/nachos_64bit/code/threads/copyright.h"
        "Offline 2/nachos_64bit/code/threads/interrupt.o"
        "Offline 2/nachos_64bit/code/threads/list.h"
        "Offline 2/nachos_64bit/code/threads/main.cc"
        "Offline 2/nachos_64bit/code/threads/main.o"
        "Offline 2/nachos_64bit/code/threads/Makefile"
        "Offline 2/nachos_64bit/code/threads/memory_manager.o"
        "Offline 2/nachos_64bit/code/threads/nachos"
        "Offline 2/nachos_64bit/code/threads/preemptive.cc"
        "Offline 2/nachos_64bit/code/threads/preemptive.h"
        "Offline 2/nachos_64bit/code/threads/preemptive.o"
        "Offline 2/nachos_64bit/code/threads/scheduler.cc"
        "Offline 2/nachos_64bit/code/threads/scheduler.h"
        "Offline 2/nachos_64bit/code/threads/scheduler.o"
        "Offline 2/nachos_64bit/code/threads/stats.o"
        "Offline 2/nachos_64bit/code/threads/switch.h"
        "Offline 2/nachos_64bit/code/threads/switch.o"
        "Offline 2/nachos_64bit/code/threads/switch.s"
        "Offline 2/nachos_64bit/code/threads/swtch.s"
        "Offline 2/nachos_64bit/code/threads/synch.cc"
        "Offline 2/nachos_64bit/code/threads/synch.h"
        "Offline 2/nachos_64bit/code/threads/synch.o"
        "Offline 2/nachos_64bit/code/threads/synchlist.h"
        "Offline 2/nachos_64bit/code/threads/sysdep.o"
        "Offline 2/nachos_64bit/code/threads/system.cc"
        "Offline 2/nachos_64bit/code/threads/system.h"
        "Offline 2/nachos_64bit/code/threads/system.o"
        "Offline 2/nachos_64bit/code/threads/thread.cc"
        "Offline 2/nachos_64bit/code/threads/thread.h"
        "Offline 2/nachos_64bit/code/threads/thread.o"
        "Offline 2/nachos_64bit/code/threads/threadtest.cc"
        "Offline 2/nachos_64bit/code/threads/threadtest.o"
        "Offline 2/nachos_64bit/code/threads/timer.o"
        "Offline 2/nachos_64bit/code/threads/utility.cc"
        "Offline 2/nachos_64bit/code/threads/utility.h"
        "Offline 2/nachos_64bit/code/threads/utility.o"
        "Offline 2/nachos_64bit/code/userprog/addrspace.cc"
        "Offline 2/nachos_64bit/code/userprog/addrspace.h"
        "Offline 2/nachos_64bit/code/userprog/addrspace.o"
        "Offline 2/nachos_64bit/code/userprog/bitmap.cc"
        "Offline 2/nachos_64bit/code/userprog/bitmap.h"
        "Offline 2/nachos_64bit/code/userprog/bitmap.o"
        "Offline 2/nachos_64bit/code/userprog/console.o"
        "Offline 2/nachos_64bit/code/userprog/exception.cc"
        "Offline 2/nachos_64bit/code/userprog/exception.o"
        "Offline 2/nachos_64bit/code/userprog/interrupt.o"
        "Offline 2/nachos_64bit/code/userprog/machine.o"
        "Offline 2/nachos_64bit/code/userprog/main.o"
        "Offline 2/nachos_64bit/code/userprog/Makefile"
        "Offline 2/nachos_64bit/code/userprog/memory_manager.cc"
        "Offline 2/nachos_64bit/code/userprog/memory_manager.h"
        "Offline 2/nachos_64bit/code/userprog/memory_manager.o"
        "Offline 2/nachos_64bit/code/userprog/mipssim.o"
        "Offline 2/nachos_64bit/code/userprog/nachos"
        "Offline 2/nachos_64bit/code/userprog/preemptive.o"
        "Offline 2/nachos_64bit/code/userprog/progtest.cc"
        "Offline 2/nachos_64bit/code/userprog/progtest.o"
        "Offline 2/nachos_64bit/code/userprog/scheduler.o"
        "Offline 2/nachos_64bit/code/userprog/spaceid_generator.cc"
        "Offline 2/nachos_64bit/code/userprog/spaceid_generator.h"
        "Offline 2/nachos_64bit/code/userprog/spaceid_generator.o"
        "Offline 2/nachos_64bit/code/userprog/stats.o"
        "Offline 2/nachos_64bit/code/userprog/switch.o"
        "Offline 2/nachos_64bit/code/userprog/swtch.s"
        "Offline 2/nachos_64bit/code/userprog/synch.o"
        "Offline 2/nachos_64bit/code/userprog/synch_console.cc"
        "Offline 2/nachos_64bit/code/userprog/synch_console.h"
        "Offline 2/nachos_64bit/code/userprog/synch_console.o"
        "Offline 2/nachos_64bit/code/userprog/syscall.h"
        "Offline 2/nachos_64bit/code/userprog/sysdep.o"
        "Offline 2/nachos_64bit/code/userprog/system.o"
        "Offline 2/nachos_64bit/code/userprog/table.cc"
        "Offline 2/nachos_64bit/code/userprog/table.h"
        "Offline 2/nachos_64bit/code/userprog/table.o"
        "Offline 2/nachos_64bit/code/userprog/thread.o"
        "Offline 2/nachos_64bit/code/userprog/threadtest.o"
        "Offline 2/nachos_64bit/code/userprog/timer.o"
        "Offline 2/nachos_64bit/code/userprog/translate.o"
        "Offline 2/nachos_64bit/code/userprog/utility.o"
        "Offline 2/nachos_64bit/code/vm/addrspace.o"
        "Offline 2/nachos_64bit/code/vm/bitmap.o"
        "Offline 2/nachos_64bit/code/vm/console.o"
        "Offline 2/nachos_64bit/code/vm/consumer.o"
        "Offline 2/nachos_64bit/code/vm/exception.o"
        "Offline 2/nachos_64bit/code/vm/interrupt.o"
        "Offline 2/nachos_64bit/code/vm/machine.o"
        "Offline 2/nachos_64bit/code/vm/main.o"
        "Offline 2/nachos_64bit/code/vm/Makefile"
        "Offline 2/nachos_64bit/code/vm/memory_manager.o"
        "Offline 2/nachos_64bit/code/vm/mipssim.o"
        "Offline 2/nachos_64bit/code/vm/nachos"
        "Offline 2/nachos_64bit/code/vm/preemptive.o"
        "Offline 2/nachos_64bit/code/vm/producer.o"
        "Offline 2/nachos_64bit/code/vm/progtest.o"
        "Offline 2/nachos_64bit/code/vm/scheduler.o"
        "Offline 2/nachos_64bit/code/vm/spaceid_generator.o"
        "Offline 2/nachos_64bit/code/vm/stats.o"
        "Offline 2/nachos_64bit/code/vm/switch.o"
        "Offline 2/nachos_64bit/code/vm/swtch.s"
        "Offline 2/nachos_64bit/code/vm/synch.o"
        "Offline 2/nachos_64bit/code/vm/synch_console.o"
        "Offline 2/nachos_64bit/code/vm/sysdep.o"
        "Offline 2/nachos_64bit/code/vm/system.o"
        "Offline 2/nachos_64bit/code/vm/table.o"
        "Offline 2/nachos_64bit/code/vm/thread.o"
        "Offline 2/nachos_64bit/code/vm/threadtest.o"
        "Offline 2/nachos_64bit/code/vm/timer.o"
        "Offline 2/nachos_64bit/code/vm/translate.o"
        "Offline 2/nachos_64bit/code/vm/utility.o"
        "Offline 2/nachos_64bit/code/Makefile"
        "Offline 2/nachos_64bit/code/Makefile.common"
        "Offline 2/nachos_64bit/code/Makefile.dep"
        "Offline 2/nachos_64bit/nachos.ps"
        "Offline 2/nachos_64bit/NachosPrimer.pdf"
        "Offline 3/nachos_64bit/code/bin/coff.h"
        "Offline 3/nachos_64bit/code/bin/coff2flat.c"
        "Offline 3/nachos_64bit/code/bin/coff2noff"
        "Offline 3/nachos_64bit/code/bin/coff2noff.c"
        "Offline 3/nachos_64bit/code/bin/coff2noff.o"
        "Offline 3/nachos_64bit/code/bin/d.c"
        "Offline 3/nachos_64bit/code/bin/disasm.c"
        "Offline 3/nachos_64bit/code/bin/encode.h"
        "Offline 3/nachos_64bit/code/bin/execute.c"
        "Offline 3/nachos_64bit/code/bin/halt"
        "Offline 3/nachos_64bit/code/bin/instr.h"
        "Offline 3/nachos_64bit/code/bin/int.h"
        "Offline 3/nachos_64bit/code/bin/main.c"
        "Offline 3/nachos_64bit/code/bin/Makefile"
        "Offline 3/nachos_64bit/code/bin/noff.h"
        "Offline 3/nachos_64bit/code/bin/opstrings.c"
        "Offline 3/nachos_64bit/code/bin/out.c"
        "Offline 3/nachos_64bit/code/bin/system.c"
        "Offline 3/nachos_64bit/code/filesys/test/big"
        "Offline 3/nachos_64bit/code/filesys/test/medium"
        "Offline 3/nachos_64bit/code/filesys/test/small"
        "Offline 3/nachos_64bit/code/filesys/addrspace.o"
        "Offline 3/nachos_64bit/code/filesys/bitmap.o"
        "Offline 3/nachos_64bit/code/filesys/console.o"
        "Offline 3/nachos_64bit/code/filesys/consumer.o"
        "Offline 3/nachos_64bit/code/filesys/directory.cc"
        "Offline 3/nachos_64bit/code/filesys/directory.h"
        "Offline 3/nachos_64bit/code/filesys/directory.o"
        "Offline 3/nachos_64bit/code/filesys/disk.o"
        "Offline 3/nachos_64bit/code/filesys/exception.o"
        "Offline 3/nachos_64bit/code/filesys/filehdr.cc"
        "Offline 3/nachos_64bit/code/filesys/filehdr.h"
        "Offline 3/nachos_64bit/code/filesys/filehdr.o"
        "Offline 3/nachos_64bit/code/filesys/filesys.cc"
        "Offline 3/nachos_64bit/code/filesys/filesys.h"
        "Offline 3/nachos_64bit/code/filesys/filesys.o"
        "Offline 3/nachos_64bit/code/filesys/fstest.cc"
        "Offline 3/nachos_64bit/code/filesys/fstest.o"
        "Offline 3/nachos_64bit/code/filesys/interrupt.o"
        "Offline 3/nachos_64bit/code/filesys/machine.o"
        "Offline 3/nachos_64bit/code/filesys/main.o"
        "Offline 3/nachos_64bit/code/filesys/Makefile"
        "Offline 3/nachos_64bit/code/filesys/memory_manager.o"
        "Offline 3/nachos_64bit/code/filesys/mipssim.o"
        "Offline 3/nachos_64bit/code/filesys/nachos"
        "Offline 3/nachos_64bit/code/filesys/openfile.cc"
        "Offline 3/nachos_64bit/code/filesys/openfile.h"
        "Offline 3/nachos_64bit/code/filesys/openfile.o"
        "Offline 3/nachos_64bit/code/filesys/preemptive.o"
        "Offline 3/nachos_64bit/code/filesys/producer.o"
        "Offline 3/nachos_64bit/code/filesys/progtest.o"
        "Offline 3/nachos_64bit/code/filesys/scheduler.o"
        "Offline 3/nachos_64bit/code/filesys/spaceid_generator.o"
        "Offline 3/nachos_64bit/code/filesys/stats.o"
        "Offline 3/nachos_64bit/code/filesys/switch.o"
        "Offline 3/nachos_64bit/code/filesys/swtch.s"
        "Offline 3/nachos_64bit/code/filesys/synch.o"
        "Offline 3/nachos_64bit/code/filesys/synch_console.o"
        "Offline 3/nachos_64bit/code/filesys/synchdisk.cc"
        "Offline 3/nachos_64bit/code/filesys/synchdisk.h"
        "Offline 3/nachos_64bit/code/filesys/synchdisk.o"
        "Offline 3/nachos_64bit/code/filesys/sysdep.o"
        "Offline 3/nachos_64bit/code/filesys/system.o"
        "Offline 3/nachos_64bit/code/filesys/table.o"
        "Offline 3/nachos_64bit/code/filesys/thread.o"
        "Offline 3/nachos_64bit/code/filesys/threadtest.o"
        "Offline 3/nachos_64bit/code/filesys/timer.o"
        "Offline 3/nachos_64bit/code/filesys/translate.o"
        "Offline 3/nachos_64bit/code/filesys/utility.o"
        "Offline 3/nachos_64bit/code/machine/console.cc"
        "Offline 3/nachos_64bit/code/machine/console.h"
        "Offline 3/nachos_64bit/code/machine/disk.cc"
        "Offline 3/nachos_64bit/code/machine/disk.h"
        "Offline 3/nachos_64bit/code/machine/interrupt.cc"
        "Offline 3/nachos_64bit/code/machine/interrupt.h"
        "Offline 3/nachos_64bit/code/machine/machine.cc"
        "Offline 3/nachos_64bit/code/machine/machine.h"
        "Offline 3/nachos_64bit/code/machine/mipssim.cc"
        "Offline 3/nachos_64bit/code/machine/mipssim.h"
        "Offline 3/nachos_64bit/code/machine/network.cc"
        "Offline 3/nachos_64bit/code/machine/network.h"
        "Offline 3/nachos_64bit/code/machine/stats.cc"
        "Offline 3/nachos_64bit/code/machine/stats.h"
        "Offline 3/nachos_64bit/code/machine/sysdep.cc"
        "Offline 3/nachos_64bit/code/machine/sysdep.h"
        "Offline 3/nachos_64bit/code/machine/timer.cc"
        "Offline 3/nachos_64bit/code/machine/timer.h"
        "Offline 3/nachos_64bit/code/machine/translate.cc"
        "Offline 3/nachos_64bit/code/machine/translate.h"
        "Offline 3/nachos_64bit/code/network/addrspace.o"
        "Offline 3/nachos_64bit/code/network/bitmap.o"
        "Offline 3/nachos_64bit/code/network/console.o"
        "Offline 3/nachos_64bit/code/network/consumer.o"
        "Offline 3/nachos_64bit/code/network/directory.o"
        "Offline 3/nachos_64bit/code/network/disk.o"
        "Offline 3/nachos_64bit/code/network/exception.o"
        "Offline 3/nachos_64bit/code/network/filehdr.o"
        "Offline 3/nachos_64bit/code/network/filesys.o"
        "Offline 3/nachos_64bit/code/network/fstest.o"
        "Offline 3/nachos_64bit/code/network/interrupt.o"
        "Offline 3/nachos_64bit/code/network/machine.o"
        "Offline 3/nachos_64bit/code/network/main.o"
        "Offline 3/nachos_64bit/code/network/Makefile"
        "Offline 3/nachos_64bit/code/network/memory_manager.o"
        "Offline 3/nachos_64bit/code/network/mipssim.o"
        "Offline 3/nachos_64bit/code/network/nachos"
        "Offline 3/nachos_64bit/code/network/nettest.cc"
        "Offline 3/nachos_64bit/code/network/nettest.o"
        "Offline 3/nachos_64bit/code/network/network.o"
        "Offline 3/nachos_64bit/code/network/openfile.o"
        "Offline 3/nachos_64bit/code/network/post.cc"
        "Offline 3/nachos_64bit/code/network/post.h"
        "Offline 3/nachos_64bit/code/network/post.o"
        "Offline 3/nachos_64bit/code/network/preemptive.o"
        "Offline 3/nachos_64bit/code/network/producer.o"
        "Offline 3/nachos_64bit/code/network/progtest.o"
        "Offline 3/nachos_64bit/code/network/README"
        "Offline 3/nachos_64bit/code/network/scheduler.o"
        "Offline 3/nachos_64bit/code/network/spaceid_generator.o"
        "Offline 3/nachos_64bit/code/network/stats.o"
        "Offline 3/nachos_64bit/code/network/switch.o"
        "Offline 3/nachos_64bit/code/network/swtch.s"
        "Offline 3/nachos_64bit/code/network/synch.o"
        "Offline 3/nachos_64bit/code/network/synch_console.o"
        "Offline 3/nachos_64bit/code/network/synchdisk.o"
        "Offline 3/nachos_64bit/code/network/sysdep.o"
        "Offline 3/nachos_64bit/code/network/system.o"
        "Offline 3/nachos_64bit/code/network/table.o"
        "Offline 3/nachos_64bit/code/network/thread.o"
        "Offline 3/nachos_64bit/code/network/threadtest.o"
        "Offline 3/nachos_64bit/code/network/timer.o"
        "Offline 3/nachos_64bit/code/network/translate.o"
        "Offline 3/nachos_64bit/code/network/utility.o"
        "Offline 3/nachos_64bit/code/test/gnu-decstation-ultrix/decstation-ultrix/as"
        "Offline 3/nachos_64bit/code/test/gnu-decstation-ultrix/decstation-ultrix/cc1"
        "Offline 3/nachos_64bit/code/test/gnu-decstation-ultrix/decstation-ultrix/cpp0"
        "Offline 3/nachos_64bit/code/test/gnu-decstation-ultrix/decstation-ultrix/gcc"
        "Offline 3/nachos_64bit/code/test/gnu-decstation-ultrix/decstation-ultrix/ld"
        "Offline 3/nachos_64bit/code/test/array"
        "Offline 3/nachos_64bit/code/test/array.c"
        "Offline 3/nachos_64bit/code/test/array.coff"
        "Offline 3/nachos_64bit/code/test/array.o"
        "Offline 3/nachos_64bit/code/test/echo"
        "Offline 3/nachos_64bit/code/test/echo.c"
        "Offline 3/nachos_64bit/code/test/echo.coff"
        "Offline 3/nachos_64bit/code/test/echo.o"
        "Offline 3/nachos_64bit/code/test/exectest"
        "Offline 3/nachos_64bit/code/test/exectest.c"
        "Offline 3/nachos_64bit/code/test/exectest.coff"
        "Offline 3/nachos_64bit/code/test/exectest.o"
        "Offline 3/nachos_64bit/code/test/exittest"
        "Offline 3/nachos_64bit/code/test/exittest.c"
        "Offline 3/nachos_64bit/code/test/exittest.coff"
        "Offline 3/nachos_64bit/code/test/exittest.o"
        "Offline 3/nachos_64bit/code/test/halt"
        "Offline 3/nachos_64bit/code/test/halt.c"
        "Offline 3/nachos_64bit/code/test/halt.coff"
        "Offline 3/nachos_64bit/code/test/halt.o"
        "Offline 3/nachos_64bit/code/test/Makefile"
        "Offline 3/nachos_64bit/code/test/matmult"
        "Offline 3/nachos_64bit/code/test/matmult.c"
        "Offline 3/nachos_64bit/code/test/matmult.coff"
        "Offline 3/nachos_64bit/code/test/matmult.o"
        "Offline 3/nachos_64bit/code/test/newtest"
        "Offline 3/nachos_64bit/code/test/newtest.c"
        "Offline 3/nachos_64bit/code/test/newtest.coff"
        "Offline 3/nachos_64bit/code/test/newtest.o"
        "Offline 3/nachos_64bit/code/test/script"
        "Offline 3/nachos_64bit/code/test/shell"
        "Offline 3/nachos_64bit/code/test/shell.c"
        "Offline 3/nachos_64bit/code/test/shell.coff"
        "Offline 3/nachos_64bit/code/test/shell.o"
        "Offline 3/nachos_64bit/code/test/sort"
        "Offline 3/nachos_64bit/code/test/sort.c"
        "Offline 3/nachos_64bit/code/test/sort.coff"
        "Offline 3/nachos_64bit/code/test/sort.o"
        "Offline 3/nachos_64bit/code/test/start.c"
        "Offline 3/nachos_64bit/code/test/start.o"
        "Offline 3/nachos_64bit/code/test/start.s"
        "Offline 3/nachos_64bit/code/threads/copyright.h"
        "Offline 3/nachos_64bit/code/threads/interrupt.o"
        "Offline 3/nachos_64bit/code/threads/list.h"
        "Offline 3/nachos_64bit/code/threads/main.cc"
        "Offline 3/nachos_64bit/code/threads/main.o"
        "Offline 3/nachos_64bit/code/threads/Makefile"
        "Offline 3/nachos_64bit/code/threads/memory_manager.o"
        "Offline 3/nachos_64bit/code/threads/nachos"
        "Offline 3/nachos_64bit/code/threads/preemptive.cc"
        "Offline 3/nachos_64bit/code/threads/preemptive.h"
        "Offline 3/nachos_64bit/code/threads/preemptive.o"
        "Offline 3/nachos_64bit/code/threads/scheduler.cc"
        "Offline 3/nachos_64bit/code/threads/scheduler.h"
        "Offline 3/nachos_64bit/code/threads/scheduler.o"
        "Offline 3/nachos_64bit/code/threads/stats.o"
        "Offline 3/nachos_64bit/code/threads/switch.h"
        "Offline 3/nachos_64bit/code/threads/switch.o"
        "Offline 3/nachos_64bit/code/threads/switch.s"
        "Offline 3/nachos_64bit/code/threads/swtch.s"
        "Offline 3/nachos_64bit/code/threads/synch.cc"
        "Offline 3/nachos_64bit/code/threads/synch.h"
        "Offline 3/nachos_64bit/code/threads/synch.o"
        "Offline 3/nachos_64bit/code/threads/synchlist.h"
        "Offline 3/nachos_64bit/code/threads/sysdep.o"
        "Offline 3/nachos_64bit/code/threads/system.cc"
        "Offline 3/nachos_64bit/code/threads/system.h"
        "Offline 3/nachos_64bit/code/threads/system.o"
        "Offline 3/nachos_64bit/code/threads/thread.cc"
        "Offline 3/nachos_64bit/code/threads/thread.h"
        "Offline 3/nachos_64bit/code/threads/thread.o"
        "Offline 3/nachos_64bit/code/threads/threadtest.cc"
        "Offline 3/nachos_64bit/code/threads/threadtest.o"
        "Offline 3/nachos_64bit/code/threads/timer.o"
        "Offline 3/nachos_64bit/code/threads/utility.cc"
        "Offline 3/nachos_64bit/code/threads/utility.h"
        "Offline 3/nachos_64bit/code/threads/utility.o"
        "Offline 3/nachos_64bit/code/userprog/addrspace.cc"
        "Offline 3/nachos_64bit/code/userprog/addrspace.h"
        "Offline 3/nachos_64bit/code/userprog/addrspace.o"
        "Offline 3/nachos_64bit/code/userprog/bitmap.cc"
        "Offline 3/nachos_64bit/code/userprog/bitmap.h"
        "Offline 3/nachos_64bit/code/userprog/bitmap.o"
        "Offline 3/nachos_64bit/code/userprog/console.o"
        "Offline 3/nachos_64bit/code/userprog/exception.cc"
        "Offline 3/nachos_64bit/code/userprog/exception.o"
        "Offline 3/nachos_64bit/code/userprog/interrupt.o"
        "Offline 3/nachos_64bit/code/userprog/machine.o"
        "Offline 3/nachos_64bit/code/userprog/main.o"
        "Offline 3/nachos_64bit/code/userprog/Makefile"
        "Offline 3/nachos_64bit/code/userprog/memory_manager.cc"
        "Offline 3/nachos_64bit/code/userprog/memory_manager.h"
        "Offline 3/nachos_64bit/code/userprog/memory_manager.o"
        "Offline 3/nachos_64bit/code/userprog/mipssim.o"
        "Offline 3/nachos_64bit/code/userprog/nachos"
        "Offline 3/nachos_64bit/code/userprog/preemptive.o"
        "Offline 3/nachos_64bit/code/userprog/progtest.cc"
        "Offline 3/nachos_64bit/code/userprog/progtest.o"
        "Offline 3/nachos_64bit/code/userprog/scheduler.o"
        "Offline 3/nachos_64bit/code/userprog/spaceid_generator.cc"
        "Offline 3/nachos_64bit/code/userprog/spaceid_generator.h"
        "Offline 3/nachos_64bit/code/userprog/spaceid_generator.o"
        "Offline 3/nachos_64bit/code/userprog/stats.o"
        "Offline 3/nachos_64bit/code/userprog/switch.o"
        "Offline 3/nachos_64bit/code/userprog/swtch.s"
        "Offline 3/nachos_64bit/code/userprog/synch.o"
        "Offline 3/nachos_64bit/code/userprog/synch_console.cc"
        "Offline 3/nachos_64bit/code/userprog/synch_console.h"
        "Offline 3/nachos_64bit/code/userprog/synch_console.o"
        "Offline 3/nachos_64bit/code/userprog/syscall.h"
        "Offline 3/nachos_64bit/code/userprog/sysdep.o"
        "Offline 3/nachos_64bit/code/userprog/system.o"
        "Offline 3/nachos_64bit/code/userprog/table.cc"
        "Offline 3/nachos_64bit/code/userprog/table.h"
        "Offline 3/nachos_64bit/code/userprog/table.o"
        "Offline 3/nachos_64bit/code/userprog/thread.o"
        "Offline 3/nachos_64bit/code/userprog/threadtest.o"
        "Offline 3/nachos_64bit/code/userprog/timer.o"
        "Offline 3/nachos_64bit/code/userprog/translate.o"
        "Offline 3/nachos_64bit/code/userprog/utility.o"
        "Offline 3/nachos_64bit/code/vm/addrspace.o"
        "Offline 3/nachos_64bit/code/vm/bitmap.o"
        "Offline 3/nachos_64bit/code/vm/console.o"
        "Offline 3/nachos_64bit/code/vm/consumer.o"
        "Offline 3/nachos_64bit/code/vm/exception.o"
        "Offline 3/nachos_64bit/code/vm/interrupt.o"
        "Offline 3/nachos_64bit/code/vm/machine.o"
        "Offline 3/nachos_64bit/code/vm/main.o"
        "Offline 3/nachos_64bit/code/vm/Makefile"
        "Offline 3/nachos_64bit/code/vm/memory_manager.o"
        "Offline 3/nachos_64bit/code/vm/mipssim.o"
        "Offline 3/nachos_64bit/code/vm/nachos"
        "Offline 3/nachos_64bit/code/vm/preemptive.o"
        "Offline 3/nachos_64bit/code/vm/producer.o"
        "Offline 3/nachos_64bit/code/vm/progtest.o"
        "Offline 3/nachos_64bit/code/vm/scheduler.o"
        "Offline 3/nachos_64bit/code/vm/spaceid_generator.o"
        "Offline 3/nachos_64bit/code/vm/stats.o"
        "Offline 3/nachos_64bit/code/vm/switch.o"
        "Offline 3/nachos_64bit/code/vm/swtch.s"
        "Offline 3/nachos_64bit/code/vm/synch.o"
        "Offline 3/nachos_64bit/code/vm/synch_console.o"
        "Offline 3/nachos_64bit/code/vm/sysdep.o"
        "Offline 3/nachos_64bit/code/vm/system.o"
        "Offline 3/nachos_64bit/code/vm/table.o"
        "Offline 3/nachos_64bit/code/vm/thread.o"
        "Offline 3/nachos_64bit/code/vm/threadtest.o"
        "Offline 3/nachos_64bit/code/vm/timer.o"
        "Offline 3/nachos_64bit/code/vm/translate.o"
        "Offline 3/nachos_64bit/code/vm/utility.o"
        "Offline 3/nachos_64bit/code/Makefile"
        "Offline 3/nachos_64bit/code/Makefile.common"
        "Offline 3/nachos_64bit/code/Makefile.dep"
        "Offline 3/nachos_64bit/nachos.ps"
        "Offline 3/nachos_64bit/NachosPrimer.pdf"
        "Offline 3/Nachos 3 Guidelines.pdf"
        CMakeLists.txt
        README.md "Offline 3/nachos_64bit/code/userprog/swap_page.cc" "Offline 3/nachos_64bit/code/userprog/swap_page.h")
